# fusion

./: .coveragerc  .env-example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
account/: apps.py  urls.py  views.py
account/templates/: base_cadastro.html  cadastro.html
account/templates/registration/: login.html
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_alter_funcionario_imagem.py  0003_alter_servico_descricao.py  0004_feature.py
core/templates/: 404.html  500.html  base.html  contato.html  equipe.html  features.html  hero.html  index.html  servicos.html
core/tests/: test_forms.py  test_models.py  test_views.py
fusion/: settings.py  urls.py  wsgi.py
